refactored test code a bit
https://zimlab.uni-graz.at/gams5/gams-management/gams-cms/gams-api/-/work_items/85